<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/car_builder"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btn_create"
        app:layout_constraintTop_toBottomOf="@id/title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/brand"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <!--            <RelativeLayout-->
            <!--                android:id="@+id/rlt_brand"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_weight="7"-->
            <!--                android:orientation="horizontal"-->
            <!--                android:weightSum="10">-->

            <!--                <TextView-->
            <!--                    android:id="@+id/brand"-->
            <!--                    android:layout_width="0dp"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_alignParentStart="true"-->
            <!--                    android:layout_centerVertical="true"-->
            <!--                    android:layout_toStartOf="@id/ic_brand_down"-->
            <!--                    android:textAlignment="center"-->
            <!--                    android:textColor="@color/white"-->
            <!--                    android:textSize="17sp" />-->

            <!--                <ImageView-->
            <!--                    android:id="@+id/ic_brand_down"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_alignParentEnd="true"-->
            <!--                    android:background="@drawable/ic_arrow_down" />-->
            <!--            </RelativeLayout>-->


            <Spinner
                android:id="@+id/brand"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/car_type"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <!--            <RelativeLayout-->
            <!--                android:id="@+id/rlt_car_type_down"-->
            <!--                android:layout_width="0dp"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_weight="7"-->
            <!--                android:orientation="horizontal"-->
            <!--                android:weightSum="10">-->

            <!--                <TextView-->
            <!--                    android:id="@+id/type"-->
            <!--                    android:layout_width="0dp"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_alignParentStart="true"-->
            <!--                    android:layout_centerVertical="true"-->
            <!--                    android:layout_toStartOf="@id/ic_car_type_down"-->
            <!--                    android:textAlignment="center"-->
            <!--                    android:textColor="@color/white"-->
            <!--                    android:textSize="17sp" />-->

            <!--                <ImageView-->
            <!--                    android:id="@+id/ic_car_type_down"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:layout_alignParentEnd="true"-->
            <!--                    android:layout_centerVertical="true"-->
            <!--                    android:background="@drawable/ic_arrow_down" />-->
            <!--            </RelativeLayout>-->

            <Spinner
                android:id="@+id/type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_air_bag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/air_bags"
                android:textAlignment="textEnd"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/et_air_bag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="7"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17sp"
                tools:text="12" />


        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>